--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"mongodb": "^5.6.0"
+	}
 }
